Corrigido FOR e FOR EACH + Busca por diretorio